--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "maatwebsite/excel": "^3.1",
         "nesbot/carbon": "^2.55",
         "realrashid/sweet-alert": "^4.1",
+        "spatie/laravel-permission": "^5.5",
         "yoeunes/toastr": "^1.2"
     },
     "require-dev": {
